headlamp/resources/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: headlamp
  annotations:
    nginx.org/mergeable-ingress-type: minion
spec:
  ingressClassName: nginx
  rules:
    - host: metallb.fritz.box
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
